metadata/objects/graxleadindex__x.object
<CustomObject>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_c__c</fullName>
        <description>Longitude__c</description>
        <externalDeveloperName>Longitude__c</externalDeveloperName>
        <label>Longitude__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Data_c__c</fullName>
        <description>MSA_Data__c</description>
        <externalDeveloperName>MSA_Data__c</externalDeveloperName>
        <label>MSA_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <description>MasterRecordId</description>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>MasterRecordId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <description>MobilePhone</description>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>MobilePhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_Data_c__c</fullName>
        <description>NAICS_Code_Data__c</description>
        <externalDeveloperName>NAICS_Code_Data__c</externalDeveloperName>
        <label>NAICS_Code_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_Data_c__c</fullName>
        <description>NAICS_Description_Data__c</description>
        <externalDeveloperName>NAICS_Description_Data__c</externalDeveloperName>
        <label>NAICS_Description_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_My_Lead_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not_My_Lead__c</description>
        <externalDeveloperName>Not_My_Lead__c</externalDeveloperName>
        <label>Not_My_Lead__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees_GRAX_long__c</fullName>
        <description>NumberOfEmployees_GRAX_long</description>
        <externalDeveloperName>NumberOfEmployees_GRAX_long</externalDeveloperName>
        <label>NumberOfEmployees_GRAX_long</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <description>NumberOfEmployees</description>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>NumberOfEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations_c__c</fullName>
        <description>NumberofLocations__c</description>
        <externalDeveloperName>NumberofLocations__c</externalDeveloperName>
        <label>NumberofLocations__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org32_ID_c__c</fullName>
        <description>Org32_ID__c</description>
        <externalDeveloperName>Org32_ID__c</externalDeveloperName>
        <label>Org32_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_OwnerId__c</fullName>
        <description>OwnerId_grax_xf_OwnerId</description>
        <externalDeveloperName>OwnerId_grax_xf_OwnerId</externalDeveloperName>
        <label>OwnerId_grax_xf_OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_group__c</fullName>
        <description>OwnerId_grax_xf_group</description>
        <externalDeveloperName>OwnerId_grax_xf_group</externalDeveloperName>
        <label>OwnerId_grax_xf_group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <description>PartnerAccountId</description>
        <externalDeveloperName>PartnerAccountId</externalDeveloperName>
        <label>PartnerAccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Company_Name_c__c</fullName>
        <description>Partner_Company_Name__c</description>
        <externalDeveloperName>Partner_Company_Name__c</externalDeveloperName>
        <label>Partner_Company_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_c__c</fullName>
        <description>Partner_Contact__c</description>
        <externalDeveloperName>Partner_Contact__c</externalDeveloperName>
        <label>Partner_Contact__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <description>PhotoUrl</description>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>PhotoUrl</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalState__c</fullName>
        <description>PostalState</description>
        <externalDeveloperName>PostalState</externalDeveloperName>
        <label>PostalState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_c__c</fullName>
        <description>Primary__c</description>
        <externalDeveloperName>Primary__c</externalDeveloperName>
        <label>Primary__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_c__c</fullName>
        <description>Priority__c</description>
        <externalDeveloperName>Priority__c</externalDeveloperName>
        <label>Priority__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInterest_c__c</fullName>
        <description>ProductInterest__c</description>
        <externalDeveloperName>ProductInterest__c</externalDeveloperName>
        <label>ProductInterest__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest_c__c</fullName>
        <description>Product_Interest__c</description>
        <externalDeveloperName>Product_Interest__c</externalDeveloperName>
        <label>Product_Interest__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_c__c</fullName>
        <description>Profile_Name__c</description>
        <externalDeveloperName>Profile_Name__c</externalDeveloperName>
        <label>Profile_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Amount_c__c</fullName>
        <description>Project_Amount__c</description>
        <externalDeveloperName>Project_Amount__c</externalDeveloperName>
        <label>Project_Amount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount_c__c</fullName>
        <description>Project_Budget_Amount__c</description>
        <externalDeveloperName>Project_Budget_Amount__c</externalDeveloperName>
        <label>Project_Budget_Amount__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Defined_c__c</fullName>
        <description>Project_Defined__c</description>
        <externalDeveloperName>Project_Defined__c</externalDeveloperName>
        <label>Project_Defined__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Owner_c__c</fullName>
        <description>Queue_Owner__c</description>
        <externalDeveloperName>Queue_Owner__c</externalDeveloperName>
        <label>Queue_Owner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSDNA_Lead_Stage_c__c</fullName>
        <description>RSDNA_Lead_Stage__c</description>
        <externalDeveloperName>RSDNA_Lead_Stage__c</externalDeveloperName>
        <label>RSDNA_Lead_Stage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Department_c__c</fullName>
        <description>RSD_Department__c</description>
        <externalDeveloperName>RSD_Department__c</externalDeveloperName>
        <label>RSD_Department__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Description_Custom_Field_c__c</fullName>
        <description>RSD_Description_Custom_Field__c</description>
        <externalDeveloperName>RSD_Description_Custom_Field__c</externalDeveloperName>
        <label>RSD_Description_Custom_Field__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Language_c__c</fullName>
        <description>RSD_Language__c</description>
        <externalDeveloperName>RSD_Language__c</externalDeveloperName>
        <label>RSD_Language__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Salespersons_Contact_Info_c__c</fullName>
        <description>RSD_Salespersons_Contact_Info__c</description>
        <externalDeveloperName>RSD_Salespersons_Contact_Info__c</externalDeveloperName>
        <label>RSD_Salespersons_Contact_Info__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatingColor_c__c</fullName>
        <description>RatingColor__c</description>
        <externalDeveloperName>RatingColor__c</externalDeveloperName>
        <label>RatingColor__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating</description>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Rating</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>RecordTypeId</description>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>RecordTypeId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId_grax_xf_recordtype__c</fullName>
        <description>RecordTypeId_grax_xf_recordtype</description>
        <externalDeveloperName>RecordTypeId_grax_xf_recordtype</externalDeveloperName>
        <label>RecordTypeId_grax_xf_recordtype</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_c__c</fullName>
        <description>Region__c</description>
        <externalDeveloperName>Region__c</externalDeveloperName>
        <label>Region__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration_c__c</fullName>
        <description>Registration_Expiration__c</description>
        <externalDeveloperName>Registration_Expiration__c</externalDeveloperName>
        <label>Registration_Expiration__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Create_Month_c__c</fullName>
        <description>Report_Create_Month__c</description>
        <externalDeveloperName>Report_Create_Month__c</externalDeveloperName>
        <label>Report_Create_Month__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Convert_Date_c__c</fullName>
        <description>Reported_Convert_Date__c</description>
        <externalDeveloperName>Reported_Convert_Date__c</externalDeveloperName>
        <label>Reported_Convert_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_Converted_c__c</fullName>
        <description>Reported_Converted__c</description>
        <externalDeveloperName>Reported_Converted__c</externalDeveloperName>
        <label>Reported_Converted__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Create_Month_del_c__c</fullName>
        <description>Reported_Create_Month_del__c</description>
        <externalDeveloperName>Reported_Create_Month_del__c</externalDeveloperName>
        <label>Reported_Create_Month_del__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Type_c__c</fullName>
        <description>Roof_Type__c</description>
        <externalDeveloperName>Roof_Type__c</externalDeveloperName>
        <label>Roof_Type__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundRobin_c__c</fullName>
        <description>RoundRobin__c</description>
        <externalDeveloperName>RoundRobin__c</externalDeveloperName>
        <label>RoundRobin__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode_c__c</fullName>
        <description>SICCode__c</description>
        <externalDeveloperName>SICCode__c</externalDeveloperName>
        <label>SICCode__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Data_c__c</fullName>
        <description>SIC_Code_Data__c</description>
        <externalDeveloperName>SIC_Code_Data__c</externalDeveloperName>
        <label>SIC_Code_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description_Data_c__c</fullName>
        <description>SIC_Description_Data__c</description>
        <externalDeveloperName>SIC_Description_Data__c</externalDeveloperName>
        <label>SIC_Description_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation</description>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score1_c__c</fullName>
        <description>Score1__c</description>
        <externalDeveloperName>Score1__c</externalDeveloperName>
        <label>Score1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score2_c__c</fullName>
        <description>Score2__c</description>
        <externalDeveloperName>Score2__c</externalDeveloperName>
        <label>Score2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score3_c__c</fullName>
        <description>Score3__c</description>
        <externalDeveloperName>Score3__c</externalDeveloperName>
        <label>Score3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seen_by_MSN_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Seen_by_MSN__c</description>
        <externalDeveloperName>Seen_by_MSN__c</externalDeveloperName>
        <label>Seen_by_MSN__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shadow_Roof_Type_c__c</fullName>
        <description>Shadow_Roof_Type__c</description>
        <externalDeveloperName>Shadow_Roof_Type__c</externalDeveloperName>
        <label>Shadow_Roof_Type__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlickSidebar_Tab_Name_c__c</fullName>
        <description>SlickSidebar_Tab_Name__c</description>
        <externalDeveloperName>SlickSidebar_Tab_Name__c</externalDeveloperName>
        <label>SlickSidebar_Tab_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_c__c</fullName>
        <description>Source__c</description>
        <externalDeveloperName>Source__c</externalDeveloperName>
        <label>Source__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>StateCode</description>
        <externalDeveloperName>StateCode</externalDeveloperName>
        <label>StateCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol_c__c</fullName>
        <description>Ticker_Symbol__c</description>
        <externalDeveloperName>Ticker_Symbol__c</externalDeveloperName>
        <label>Ticker_Symbol__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_1_c__c</fullName>
        <description>Top_Predictive_1__c</description>
        <externalDeveloperName>Top_Predictive_1__c</externalDeveloperName>
        <label>Top_Predictive_1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_2_c__c</fullName>
        <description>Top_Predictive_2__c</description>
        <externalDeveloperName>Top_Predictive_2__c</externalDeveloperName>
        <label>Top_Predictive_2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_3_c__c</fullName>
        <description>Top_Predictive_3__c</description>
        <externalDeveloperName>Top_Predictive_3__c</externalDeveloperName>
        <label>Top_Predictive_3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_1_c__c</fullName>
        <description>Top_Predictive_Result_1__c</description>
        <externalDeveloperName>Top_Predictive_Result_1__c</externalDeveloperName>
        <label>Top_Predictive_Result_1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_2_c__c</fullName>
        <description>Top_Predictive_Result_2__c</description>
        <externalDeveloperName>Top_Predictive_Result_2__c</externalDeveloperName>
        <label>Top_Predictive_Result_2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_3_c__c</fullName>
        <description>Top_Predictive_Result_3__c</description>
        <externalDeveloperName>Top_Predictive_Result_3__c</externalDeveloperName>
        <label>Top_Predictive_Result_3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterID_c__c</fullName>
        <description>TwitterID__c</description>
        <externalDeveloperName>TwitterID__c</externalDeveloperName>
        <label>TwitterID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Persona_ID_c__c</fullName>
        <description>Twitter_Persona_ID__c</description>
        <externalDeveloperName>Twitter_Persona_ID__c</externalDeveloperName>
        <label>Twitter_Persona_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc_c__c</fullName>
        <description>URLsrc__c</description>
        <externalDeveloperName>URLsrc__c</externalDeveloperName>
        <label>URLsrc__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_created_from_Lead_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was_created_from_Lead__c</description>
        <externalDeveloperName>Was_created_from_Lead__c</externalDeveloperName>
        <label>Was_created_from_Lead__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website</description>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id_c__c</fullName>
        <description>analyticsdemo_batch_id__c</description>
        <externalDeveloperName>analyticsdemo_batch_id__c</externalDeveloperName>
        <label>analyticsdemo_batch_id__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>escore_c__c</fullName>
        <description>escore__c</description>
        <externalDeveloperName>escore__c</externalDeveloperName>
        <label>escore__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_ConvertedAccount_Name__c</fullName>
        <description>grax_ConvertedAccount_Name</description>
        <externalDeveloperName>grax_ConvertedAccount_Name</externalDeveloperName>
        <label>grax_ConvertedAccount_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ConvertedContact_Name__c</fullName>
        <description>grax_ConvertedContact_Name</description>
        <externalDeveloperName>grax_ConvertedContact_Name</externalDeveloperName>
        <label>grax_ConvertedContact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CurrentGenerators_c__c</fullName>
        <description>grax__CurrentGenerators__c</description>
        <externalDeveloperName>grax__CurrentGenerators__c</externalDeveloperName>
        <label>grax__CurrentGenerators__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_NumberofLocations_c__c</fullName>
        <description>grax__NumberofLocations__c</description>
        <externalDeveloperName>grax__NumberofLocations__c</externalDeveloperName>
        <label>grax__NumberofLocations__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax_OwnerId_xf__c</fullName>
        <description>grax_OwnerId_xf</description>
        <externalDeveloperName>grax_OwnerId_xf</externalDeveloperName>
        <label>grax_OwnerId_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Owner_Name__c</fullName>
        <description>grax_Owner_Name</description>
        <externalDeveloperName>grax_Owner_Name</externalDeveloperName>
        <label>grax_Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Primary_c__c</fullName>
        <description>grax__Primary__c</description>
        <externalDeveloperName>grax__Primary__c</externalDeveloperName>
        <label>grax__Primary__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ProductInterest_c__c</fullName>
        <description>grax__ProductInterest__c</description>
        <externalDeveloperName>grax__ProductInterest__c</externalDeveloperName>
        <label>grax__ProductInterest__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_RecordType_Name__c</fullName>
        <description>grax_RecordType_Name</description>
        <externalDeveloperName>grax_RecordType_Name</externalDeveloperName>
        <label>grax_RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_SICCode_c__c</fullName>
        <description>grax__SICCode__c</description>
        <externalDeveloperName>grax__SICCode__c</externalDeveloperName>
        <label>grax__SICCode__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_account_xf__c</fullName>
        <description>grax_account_xf</description>
        <externalDeveloperName>grax_account_xf</externalDeveloperName>
        <label>grax_account_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_xf__c</fullName>
        <description>grax_contact_xf</description>
        <externalDeveloperName>grax_contact_xf</externalDeveloperName>
        <label>grax_contact_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_convertedaccountid_name__c</fullName>
        <description>grax_convertedaccountid_name</description>
        <externalDeveloperName>grax_convertedaccountid_name</externalDeveloperName>
        <label>grax_convertedaccountid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_convertedcontactid_name__c</fullName>
        <description>grax_convertedcontactid_name</description>
        <externalDeveloperName>grax_convertedcontactid_name</externalDeveloperName>
        <label>grax_convertedcontactid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_convertedopportunityid_name__c</fullName>
        <description>grax_convertedopportunityid_name</description>
        <externalDeveloperName>grax_convertedopportunityid_name</externalDeveloperName>
        <label>grax_convertedopportunityid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_dandbcompanyid_name__c</fullName>
        <description>grax_dandbcompanyid_name</description>
        <externalDeveloperName>grax_dandbcompanyid_name</externalDeveloperName>
        <label>grax_dandbcompanyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_group_xf__c</fullName>
        <description>grax_group_xf</description>
        <externalDeveloperName>grax_group_xf</externalDeveloperName>
        <label>grax_group_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_individualid_name__c</fullName>
        <description>grax_individualid_name</description>
        <externalDeveloperName>grax_individualid_name</externalDeveloperName>
        <label>grax_individualid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lead_name__c</fullName>
        <description>grax_lead_name</description>
        <externalDeveloperName>grax_lead_name</externalDeveloperName>
        <label>grax_lead_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lead_xf__c</fullName>
        <description>grax_lead_xf</description>
        <externalDeveloperName>grax_lead_xf</externalDeveloperName>
        <label>grax_lead_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_masterrecordid_name__c</fullName>
        <description>grax_masterrecordid_name</description>
        <externalDeveloperName>grax_masterrecordid_name</externalDeveloperName>
        <label>grax_masterrecordid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_murali_account_r_Name__c</fullName>
        <description>grax_murali_account__r_Name</description>
        <externalDeveloperName>grax_murali_account__r_Name</externalDeveloperName>
        <label>grax_murali_account__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_opportunity_xf__c</fullName>
        <description>grax_opportunity_xf</description>
        <externalDeveloperName>grax_opportunity_xf</externalDeveloperName>
        <label>grax_opportunity_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ownerid_name__c</fullName>
        <description>grax_ownerid_name</description>
        <externalDeveloperName>grax_ownerid_name</externalDeveloperName>
        <label>grax_ownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtype_xf__c</fullName>
        <description>grax_recordtype_xf</description>
        <externalDeveloperName>grax_recordtype_xf</externalDeveloperName>
        <label>grax_recordtype_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>muraliDate_c__c</fullName>
        <description>muraliDate__c</description>
        <externalDeveloperName>muraliDate__c</externalDeveloperName>
        <label>muraliDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>muraliTest_c__c</fullName>
        <description>muraliTest__c</description>
        <externalDeveloperName>muraliTest__c</externalDeveloperName>
        <label>muraliTest__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>murali_account_c__c</fullName>
        <description>murali_account__c</description>
        <externalDeveloperName>murali_account__c</externalDeveloperName>
        <label>murali_account__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>murali_c__c</fullName>
        <description>murali__c</description>
        <externalDeveloperName>murali__c</externalDeveloperName>
        <label>murali__c</label>
        <type>DateTime</type>
    </fields>
</CustomObject>